--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -640,3 +640,20 @@ aside li {
 .product-card-border {
   border: 1px solid #EAEAEA;
 }
+
+.divider-border {
+  border: none;
+  height: 3px; /* Adjust the thickness of the line */
+  position: relative;
+}
+
+.divider-border::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  border-bottom: 3px dashed #f0f0f0; /* Adjust the thickness and color of the dashed line */
+  margin-bottom: 10px; /* Adjust the spacing between the dashes */
+}
